[build-system]
requires = ["maturin>=0.14,<0.15"]
build-backend = "maturin"

[project]
name = "saimin"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]


[tool.maturin]
features = ["pyo3/extension-module"]

[tool.hatch.envs.default]
dependencies = [
    "pandas",
    "polars",
    "pyarrow",
    "pysam",
    "richbench",
]

[tool.hatch.envs.default.scripts]
bench = "hyperfine --warmup 3 './bench.py pysam' './bench.py saimin_polars' './bench.py saimin_pandas' './bench.py saimin_ipc'"

[tool.ruff.isort]
known-first-party = ["saimin"]
